--- a/notebooks/environment_test.ipynb
+++ b/notebooks/environment_test.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "## 1. Verify data science/ML libraries\n",
     "\n",
-    "Check that TensorFlow is importable and is the correct version (2.16)"
+    "Check that TensorFlow and PyTorch are importable and are the correct versions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "543d7e55",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,10 @@
    ],
    "source": [
     "import tensorflow as tf\n",
-    "print('TensorFlow version:', tf.__version__)"
+    "import torch\n",
+    "\n",
+    "print('TensorFlow version:', tf.__version__)\n",
+    "print('PyTorch version:', torch.__version__)"
    ]
   },
   {
@@ -36,12 +39,12 @@
    "id": "0adb8e86",
    "metadata": {},
    "source": [
-    "Check that GPU(s) are correctly detected and available"
+    "Check that GPU(s) are correctly detected and available for both frameworks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fe03f200",
    "metadata": {},
    "outputs": [
@@ -54,7 +57,16 @@
     }
    ],
    "source": [
-    "print(tf.config.list_physical_devices('GPU'))"
+    "# TensorFlow GPU detection\n",
+    "print('TensorFlow GPUs:', tf.config.list_physical_devices('GPU'))\n",
+    "\n",
+    "# PyTorch GPU detection\n",
+    "print(f'PyTorch CUDA available: {torch.cuda.is_available()}')\n",
+    "print(f'PyTorch CUDA device count: {torch.cuda.device_count()}')\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    for i in range(torch.cuda.device_count()):\n",
+    "        print(f'  GPU {i}: {torch.cuda.get_device_name(i)}')"
    ]
   },
   {
@@ -264,6 +276,43 @@
     "from functions.gpu_load_test import plot_temperature_results\n",
     "\n",
     "plot_temperature_results(gpu_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ae4b268",
+   "metadata": {},
+   "source": [
+    "## 3. PyTorch GPU load test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a53d5e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PyTorch GPU load test - Matrix multiplication with memory scaling\n",
+    "from functions.pytorch_gpu_load_test import run_pytorch_gpu_load_test\n",
+    "\n",
+    "target_memory_percent = 75.0\n",
+    "test_duration_seconds = 10 * 60\n",
+    "\n",
+    "pytorch_gpu_results = run_pytorch_gpu_load_test(target_memory_percent, test_duration_seconds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc997887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot temperature over time for each GPU\n",
+    "from functions.pytorch_gpu_load_test import plot_temperature_results\n",
+    "\n",
+    "plot_temperature_results(pytorch_gpu_results)"
    ]
   }
  ],
